--- a/inst/doc/report_files/esu_report.Rmd
+++ b/inst/doc/report_files/esu_report.Rmd
@@ -64,7 +64,7 @@ knitr::opts_chunk$set(fig.height=fig.height)
 
 ```{r productivity_fig, echo=FALSE,fig.width=8.5}
 #source("productivity_plot.R")
-coho.chum=any(str_detect(pops.to.plot.wild[1],c("Coho","Chum","coho", "chum")))
+coho.chum=any(stringr::str_detect(pops.to.plot.wild[1],c("Coho","Chum","coho", "chum")))
 lag=ifelse(coho.chum, 3, 4)
 productivity_plot(esuname, pops.to.plot.wild, ifit.total, ifit.fracwild,
                   min.year=plot.min.year, max.year=plot.max.year, type=1, lag=lag)
@@ -97,9 +97,9 @@ vals1=vals2=c()
 geo.start=which(names(a)=="MPG")+1
 geo.end=which(names(a)=="% Change")-1
 for(i in 1:dim(a)[1]){
-  vals1=rbind(vals1, as.numeric(apply(a[i,geo.start:geo.end],2,function(x){str_split(x," [(]")[[1]][1]})))
-  vals=apply(a[i,geo.start:geo.end],2,function(x){str_split(x," [(]")[[1]][2]})
-  vals=sapply(vals,function(x){str_split(x,"[)]")[[1]][1]})
+  vals1=rbind(vals1, as.numeric(apply(a[i,geo.start:geo.end],2,function(x){stringr::str_split(x," [(]")[[1]][1]})))
+  vals=apply(a[i,geo.start:geo.end],2,function(x){stringr::str_split(x," [(]")[[1]][2]})
+  vals=sapply(vals,function(x){stringr::str_split(x,"[)]")[[1]][1]})
   vals2=rbind(vals2, as.numeric(vals))
   }
 
@@ -148,7 +148,7 @@ for(i in 1:3){
 box()
 title("% change in 5-year geomean of smoothed spawners")
 
-vals=sapply(a[,"% Change"],function(x){str_split(x," [(]")[[1]][1]})
+vals=sapply(a[,"% Change"],function(x){stringr::str_split(x," [(]")[[1]][1]})
 vals=table(cut(as.numeric(vals),breaks=c(-5000,seq(-100,100,20),5000)))
 x = barplot(vals, xaxt="n",col=c(rep("red",6),rep("black",6)),ylab="Num of populations")
 labs=paste(seq(-120,100,20)," to ",seq(-100,120,20),"%", sep="")
@@ -158,8 +158,8 @@ title("Percent change in 5-year geomean\nof smoothed log wild spawners")
 
 #source("trend_15_tables.R")
 a=trend_15_table(pops.to.plot.wild, mpg.to.plot.wild, ifit.total, ifit.fracwild)
-vals1 = as.numeric(sapply(a[,3],function(x){str_split(x," [(]")[[1]][1]}))
-vals2 = as.numeric(sapply(a[,4],function(x){str_split(x," [(]")[[1]][1]}))
+vals1 = as.numeric(sapply(a[,3],function(x){stringr::str_split(x," [(]")[[1]][1]}))
+vals2 = as.numeric(sapply(a[,4],function(x){stringr::str_split(x," [(]")[[1]][1]}))
 
 #ylims=c( 0.95*min(vals1, vals2, na.rm=TRUE), 1.05*max(vals1, vals2, na.rm=TRUE) )
 ylims=c( 0.95*min(-.2, vals1, vals2, na.rm=TRUE), 1.05*max(0.2, vals1, vals2, na.rm=TRUE) )
@@ -194,16 +194,17 @@ if(output.type=="latex"){
 if(output.type=="html"){
   cat("## 5-year geometric mean of smoothed wild spawners\n\n")
   cat(caption)
-  clean.a = data.frame(lapply(a[[1]], function(x) {str_replace_all(x, "[)]", "\\\\)")} ))
+  clean.a = data.frame(lapply(a[[1]], function(x) {stringr::str_replace_all(x, "[)]", "\\\\)")} ))
   colnames(clean.a)=colnames(a[[2]])
-  kable(clean.a) %>% kable_styling(full_width = FALSE)
+  knitr::kable(clean.a) %>% 
+    kableExtra::kable_styling(full_width = FALSE)
 }
 if(output.type=="word"){
   cat("## 5-year geometric mean of smoothed wild spawners\n\n")
   cat(caption)
-  clean.a = data.frame(lapply(a[[1]], function(x) {str_replace_all(x, "[)]", "\\\\)")} ))
+  clean.a = data.frame(lapply(a[[1]], function(x) {stringr::str_replace_all(x, "[)]", "\\\\)")} ))
   colnames(clean.a)=colnames(a[[2]])
-  kable(clean.a)
+  knitr::kable(clean.a)
 }
 ```
 
@@ -222,16 +223,17 @@ if(output.type=="latex"){
 if(output.type=="html"){
   cat("## 5-year geometric mean of raw wild spawners\n\n")
   cat(caption)
-  clean.a = data.frame(lapply(a[[2]], function(x) {str_replace_all(x, "[)]", "\\\\)")} ))
+  clean.a = data.frame(lapply(a[[2]], function(x) {stringr::str_replace_all(x, "[)]", "\\\\)")} ))
   colnames(clean.a)=colnames(a[[2]])
-  kable(clean.a) %>% kable_styling(full_width = FALSE)
+  knitr::kable(clean.a) %>% 
+    kableExtra::kable_styling(full_width = FALSE)
 }
 if(output.type=="word"){
   cat("## 5-year geometric mean of raw wild spawners\n\n")
   cat(caption)
-  clean.a = data.frame(lapply(a[[2]], function(x) {str_replace_all(x, "[)]", "\\\\)")} ))
+  clean.a = data.frame(lapply(a[[2]], function(x) {stringr::str_replace_all(x, "[)]", "\\\\)")} ))
   colnames(clean.a)=colnames(a[[2]])
-  kable(clean.a)
+  knitr::kable(clean.a)
 }
 ```
 
@@ -252,13 +254,13 @@ if(output.type=="latex")
 if(output.type=="html"){
   cat("## Wild fracton\n\n")
   cat(caption)
-  kable(a, digits=2) %>%
-  kable_styling(full_width = FALSE)
+  knitr::kable(a, digits=2) %>%
+    kableExtra::kable_styling(full_width = FALSE)
 }
 if(output.type=="word"){
   cat("## Wild fracton\n\n")
   cat(caption)
-  kable(a, digits=2)
+  knitr::kable(a, digits=2)
 }
 ```
 
@@ -278,13 +280,13 @@ if(output.type=="latex")
 if(output.type=="html"){
   cat("## 15-year trends\n\n")
   cat(caption)
-  kable(a, digits=2) %>%
-  kable_styling(full_width = FALSE)
+  knitr::kable(a, digits=2) %>%
+    kableExtra::kable_styling(full_width = FALSE)
 }
 if(output.type=="word"){
   cat("## 15-year trends\n\n")
   cat(caption)
-  kable(a, digits=2)
+  knitr::kable(a, digits=2)
 }
 ```
 
