--- a/inst/doc/report_files/esu_report.Rmd
+++ b/inst/doc/report_files/esu_report.Rmd
@@ -70,7 +70,9 @@ knitr::opts_chunk$set(fig.height=fig.height)
 coho.chum=any(metadat$Species %in% c("Coho", "Chum"))
 #coho.chum=any(stringr::str_detect(pops.to.plot.wild[1],c("Coho","Chum","coho", "chum")))
 lag=ifelse(coho.chum, 3, 4)
-productivity_plot(esuname, pops.to.plot.wild, ifit.total, ifit.fracwild,
+# This plot is only for wild spawners
+if(length(pops.to.plot.wild)!=0) 
+  productivity_plot(esuname, pops.to.plot.wild, ifit.total, ifit.fracwild,
                   min.year=plot.min.year, max.year=plot.max.year, type=1, lag=lag)
 ```
 
