tidyverse style + csv for trend

--- a/inst/doc/report_files/esu_report.Rmd
+++ b/inst/doc/report_files/esu_report.Rmd
@@ -197,13 +197,12 @@ if(output.type=="latex") cat("\\newpage")
 ```
 
 ```{r, results='asis', echo=FALSE}
-require(xtable)
 #source("geomean_tables.R")
 #a=geomean_table(pops.to.plot, mpg.to.plot, ifit.total, ifit.fracwild)
 a=do.call(geomean_table, 
           c(list(pops.to.plot, mpg.to.plot, ifit.total, ifit.fracwild),geomean.table.control))
 if(output.type=="latex")
-  print(xtable(a[[1]], align="rr|c|cccccc", digits=0), 
+  print(xtable::xtable(a[[1]], align="rr|c|cccccc", digits=0), 
       comment=FALSE, include.rownames=FALSE, table.placement="p", type=output.type,
       file=paste0(figdir,"/geomean_total_table.tex"))
 caption="5-year geometric mean of smoothed wild spawner estimate (smoothed total spawners times smoothed fracwild).  In parentheses, the 5-year geometric mean of smoothed total spawners (black thick line in graphs) is shown.  A row with only values in parentheses indicates that no fraction wild estimates were available for that population. Geometric mean was computed as the product of counts raised to the power 1/(number of values in band)."
@@ -214,7 +213,7 @@ if(geomean.table.control$change.col=="last.two" | is.null(geomean.table.control$
 caption <- paste(caption, chg.col)
 if(output.type=="latex"){
   cat("\\begin{landscape}")
-  print(xtable(a[[1]], align="rr|c|cccccc", digits=0, caption=caption), 
+  print(xtable::xtable(a[[1]], align="rr|c|cccccc", digits=0, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type)
   cat("\\end{landscape}") }
@@ -237,7 +236,7 @@ if(output.type=="word"){
 
 ```{r geomean_wild_table, results='asis', echo=FALSE}
 if(output.type=="latex")
-  print(xtable(a[[2]], align="rr|c|cccccc", digits=0), 
+  print(xtable::xtable(a[[2]], align="rr|c|cccccc", digits=0), 
       comment=FALSE, include.rownames=FALSE, table.placement="p", type=output.type,
       file=paste0(figdir,"/geomean_wild_table.tex"))
 caption="5-year geometric mean of raw wild spawner counts. This is the raw total spawner count times the fraction wild estimate, if available.  In parentheses, 5-year geometric mean of raw total spawner counts is shown. A value only in parentheses means that a total spawner count was available but no or only one estimate of wild spawners available. The geometric mean was computed as the product of counts raised to the power 1 over the number of counts available (2 to 5). A minimum of 2 values were used to compute the geometric mean."
@@ -248,7 +247,7 @@ if(geomean.table.control$change.col=="last.two" | is.null(geomean.table.control$
 caption <- paste(caption, chg.col)
 if(output.type=="latex"){
   cat("\\begin{landscape}")
-  print(xtable(a[[2]], align="rr|c|cccccc", digits=0, caption=caption), 
+  print(xtable::xtable(a[[2]], align="rr|c|cccccc", digits=0, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type) 
   cat("\\end{landscape}") }
@@ -275,12 +274,12 @@ total.spawners=matdat.spawners[esus==esuname,,drop=FALSE]
 wild.spawners=matdat.wildspawners[esus==esuname,,drop=FALSE]
 a=fracwild_table(wild.spawners[pops.to.plot,,drop=FALSE], total.spawners[pops.to.plot,,drop=FALSE])
 if(output.type=="latex")
-  print(xtable(a, align="rr|ccccc", digits=2), 
+  print(xtable::xtable(a, align="rr|ccccc", digits=2), 
       comment=FALSE, include.rownames=FALSE, table.placement="p", type=output.type,
       file=paste0(figdir,"/fracwild_table.tex"))
 caption="5-year mean of fraction wild (sum of all estimates divided by the number of estimates).  Blanks (or NaN) mean no estimate available in that 5-year range."
 if(output.type=="latex") 
-  print(xtable(a, align="rr|ccccc", digits=2, caption=caption), 
+  print(xtable::xtable(a, align="rr|ccccc", digits=2, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type)
 if(output.type=="html"){
@@ -304,13 +303,13 @@ a=do.call(trend_15_table,
 ntrend <- length(trend.table.control$year.ranges[[1]])-1
 nrange <- length(trend.table.control$year.ranges)
 if(output.type=="latex")
-  print(xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2), 
+  print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2), 
       comment=FALSE, include.rownames=FALSE,
       table.placement="p", type=output.type,
       file=paste0(figdir,"/trend_15_table.tex")) 
 caption=paste0(ntrend,"-year trends (slope) in log wild spawner abundance computed from a linear regression applied to the smoothed wild spawner log abundance estimate versus year. In parentheses are the upper and lower 95\\% CIs. Only populations with at least 4 wild spawner estimates and with at least 2 data points in the first 5 years and last 5 years of the ",ntrend,"-year ranges are shown.")
 if(output.type=="latex")
-  print(xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2, caption=caption), 
+  print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type)
 if(output.type=="html"){
@@ -324,6 +323,26 @@ if(output.type=="word"){
   cat(caption)
   knitr::kable(a, digits=2)
 }
+fun1 <- function(x){
+    tmp <- stringr::str_split(x, " [(]")[[1]][2]
+    stringr::str_split(tmp, ", ")[[1]][1]
+}
+fun2 <- function(x){
+    tmp <- stringr::str_split(x, " [(]")[[1]][2]
+    tmp <- stringr::str_split(tmp, ", ")[[1]][2]
+    stringr::str_split(tmp, "[)]")[[1]][1]
+}
+n <- ncol(a)
+for(i in 3:n){
+  a <- cbind(a, unlist(lapply(a[,i], function(x){stringr::str_split(x, " [(]")[[1]][1]})))
+  a <- cbind(a, unlist(lapply(a[,i], fun1)))
+  a <- cbind(a, unlist(lapply(a[,i], fun2)))
+  colnames(a)[ncol(a)-2] <- paste(colnames(a)[i], "trend")
+  colnames(a)[ncol(a)-1] <- paste(colnames(a)[i], "low.ci")
+  colnames(a)[ncol(a)] <- paste(colnames(a)[i], "up.ci")
+}
+
+write.csv(a, file=paste0(figdir,"trend_table.csv"), row.names=FALSE)
 ```
 
 
