--- a/inst/doc/report_files/esu_report.Rmd
+++ b/inst/doc/report_files/esu_report.Rmd
@@ -85,17 +85,24 @@ par(mfrow=c(3,2))
 #source("fracwild_tables.R")
 total.spawners=matdat.spawners[esus==esuname,,drop=FALSE]
 wild.spawners=matdat.wildspawners[esus==esuname,,drop=FALSE]
-a=fracwild_table(wild.spawners[pops.to.plot,,drop=FALSE], total.spawners[pops.to.plot,,drop=FALSE])
+a=fracwild_table(
+  wild.spawners[pops.to.plot,,drop=FALSE], 
+  total.spawners[pops.to.plot,,drop=FALSE],
+  min.year=plot.min.year, 
+  max.year=plot.max.year
+  )
 
-barplot(table(cut(as.numeric(as.character((a[,5]))),seq(0,1,.2)),exclude=NULL, useNA="always"), 
-        names.arg=c(as.character(seq(0.1,.9,0.2)),"NA"),ylab="Count",
-        ylim=c(0,dim(a)[1]))
-title("Fraction wild across populations 2005-2009")
+nc <- ncol(a); nr <- nrow(a)
+barplot(table(cut(as.numeric(as.character((a[,nc-1]))),seq(0,1,.2)),exclude=NULL, useNA="always"), 
+        names.arg=c(as.character(seq(0.1,.9,0.2)),"NA"),
+        ylab="Count",
+        ylim=c(0,nr))
+title(paste("Fraction wild across populations", colnames(a)[nc-1]))
 
-barplot(table(cut(as.numeric(as.character((a[,6]))),seq(0,1,.2)),exclude=NULL, useNA="always"), 
+barplot(table(cut(as.numeric(as.character((a[,nc]))),seq(0,1,.2)),exclude=NULL, useNA="always"), 
         names.arg=c(as.character(seq(0.1,.9,0.2)),"NA"),ylab="Count",
-        ylim=c(0,dim(a)[1]))
-title("Fraction wild across populations 2010-2014")
+        ylim=c(0,nr))
+title(paste("Fraction wild across populations", colnames(a)[nc]))
 
 #source("geomean_tables.R")
 #a=geomean_table(pops.to.plot, mpg.to.plot, ifit.total, ifit.fracwild)[[1]]
@@ -116,7 +123,7 @@ labs <- cbind(labs[2:length(labs)], labs[1:(length(labs)-1)])
 labs <- apply(labs,1,function(x){paste(x, collapse="\n")})
 nlabs <- length(labs)
 plot(0:(nlabs+1), 0:(nlabs+1), xlim=c(0,nlabs+0.5), ylim=c(-1*log10(1000),log10(1000)), type="n",
-     axes=FALSE, ylab="log 10 percent change", xlab="")
+     axes=FALSE, ylab="percent change (log scale)", xlab="")
 n=dim(vals2)[1] # n pops
 for(i in 1:(dim(vals1)[2]-1)){
   vals=100*(vals1[,i+1]-vals1[,i])/vals1[,i]
@@ -124,13 +131,10 @@ for(i in 1:(dim(vals1)[2]-1)){
          cex=1.5, pch=19,col=ifelse(vals<0,"red","black"))
 }
 axis(side=1, at=1:nlabs, label=labs, cex.axis=.9, padj=0.5)
-axis(side=2); 
+labs <- c("-1000%", "-100%", "-10%", "0", "10%", "100%", "1000%")
+axis(side=2, at=c(-3:-1,0,1:3), label=labs, cex.axis=.9, padj=0.5, las=2)
 abline(h=0)
 abline(h=1:3,lty=2,col="grey"); abline(h= -1:-3,lty=2,col="grey")
-for(i in 1:3){
-  legend(0,i+.2, c("10%","100%","1000%")[i], box.col="white", bg="white")  
-  legend(0,-i+.2, c("-10%","-100%","-1000%")[i], box.col="white", bg="white")  
-  }
 box()
 title("% change in 5-year geomean of smoothed wild spawners")
 labs <- colnames(a)[geo.start:geo.end]
@@ -139,7 +143,7 @@ labs <- apply(labs,1,function(x){paste(x, collapse="\n")})
 nlabs <- length(labs)
 
 plot(0:(nlabs+1),0:(nlabs+1),xlim=c(0,nlabs+0.5),ylim=c(-1*log10(1000),log10(1000)), type="n", axes=FALSE, 
-     ylab="log 10 percent change", xlab="")
+     ylab="percent change (log scale)", xlab="")
 for(i in 1:(dim(vals1)[2]-1)){
   n=dim(vals2)[1]
   vals=100*(vals2[,i+1]-vals2[,i])/vals2[,i]
@@ -147,14 +151,11 @@ for(i in 1:(dim(vals1)[2]-1)){
          cex=1.5, pch=19,col=ifelse(vals<0,"red","black"))
   }
 axis(side=1, at=1:nlabs, label=labs, cex.axis=.9, padj=0.5)
-axis(side=2); 
+labs <- c("-1000%", "-100%", "-10%", "0", "10%", "100%", "1000%")
+axis(side=2, at=c(-3:-1,0,1:3), label=labs, cex.axis=.9, padj=0.5, las=2)
 abline(h=0)
 abline(h=1,lty=2); abline(h=2,lty=2); abline(h=3,lty=2)
 abline(h=-1,lty=2); abline(h=-2,lty=2); abline(h=-3,lty=2)
-for(i in 1:3){
-  legend(0,i+.3, c("10%","100%","1000%")[i], box.col="white", bg="white")  
-  legend(0,-i+.3, c("-10%","-100%","-1000%")[i], box.col="white", bg="white")  
-  }
 box()
 title("% change in 5-year geomean of smoothed spawners")
 
@@ -180,7 +181,7 @@ for(i in 1:nrange){
 #ylims=c( 0.95*min(vals1, vals2, na.rm=TRUE), 1.05*max(vals1, vals2, na.rm=TRUE) )
 ylims=c( 0.95*min(-.2, unlist(vals), na.rm=TRUE), 1.05*max(0.2, unlist(vals), na.rm=TRUE) )
 plot( rep(1,dim(a)[1]),vals[[1]], xlim=c(0.5,nrange+0.5), ylim=ylims, col=ifelse(a[,3]<0,"red","black"),
-      axes=FALSE, ylab="15-year trend in log abundance", xlab="", cex=1.5, pch=19); axis(side=2); box()
+      axes=FALSE, ylab=paste0(ntrend,"-year trend in log abundance"), xlab="", cex=1.5, pch=19); axis(side=2); box()
 if(nrange>1){
   for(i in 2:nrange){
   points( rep(i,dim(a)[1]), vals[[i]], col=ifelse(a[,2+i] <= 0,"red","black"), cex=1.5, pch=19 )
@@ -272,7 +273,12 @@ if(output.type=="word"){
 #source("fracwild_tables.R")
 total.spawners=matdat.spawners[esus==esuname,,drop=FALSE]
 wild.spawners=matdat.wildspawners[esus==esuname,,drop=FALSE]
-a=fracwild_table(wild.spawners[pops.to.plot,,drop=FALSE], total.spawners[pops.to.plot,,drop=FALSE])
+a=fracwild_table(
+  wild.spawners[pops.to.plot,,drop=FALSE], 
+  total.spawners[pops.to.plot,,drop=FALSE],
+  min.year=plot.min.year, 
+  max.year=plot.max.year
+  )
 if(output.type=="latex")
   print(xtable::xtable(a, align="rr|ccccc", digits=2), 
       comment=FALSE, include.rownames=FALSE, table.placement="p", type=output.type,
@@ -300,14 +306,14 @@ if(output.type=="word"){
 #a=trend_15_table(pops.to.plot.wild, mpg.to.plot.wild, ifit.total, ifit.fracwild)
 a=do.call(trend_15_table, 
           c(list(pops.to.plot.wild, mpg.to.plot.wild, ifit.total, ifit.fracwild),trend.table.control))
-ntrend <- length(trend.table.control$year.ranges[[1]])-1
+ntrend <- length(trend.table.control$year.ranges[[1]])
 nrange <- length(trend.table.control$year.ranges)
 if(output.type=="latex")
   print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2), 
       comment=FALSE, include.rownames=FALSE,
       table.placement="p", type=output.type,
       file=paste0(figdir,"/trend_15_table.tex")) 
-caption=paste0(ntrend,"-year trends (slope) in log wild spawner abundance computed from a linear regression applied to the smoothed wild spawner log abundance estimate versus year. In parentheses are the upper and lower 95\\% CIs. Only populations with at least 4 wild spawner estimates and with at least 2 data points in the first 5 years and last 5 years of the ",ntrend,"-year ranges are shown.")
+caption=paste0(ntrend,"-year trends (slope) in log wild spawner abundance computed from a linear regression applied to the smoothed wild spawner log abundance estimate versus year. In parentheses are the upper and lower 95\\% CIs. Only populations with at least 4 wild spawner estimates and with at least 2 data points (actual data not estimates) in the first 5 years and last 5 years of the ",ntrend,"-year ranges are shown.")
 if(output.type=="latex")
   print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
